--- a/z20201019.htm
+++ b/z20201019.htm
@@ -5,7 +5,7 @@
 
 
 
-下拉選單<form action = "https://24h.pchome.com.tw/store/" method = "get">
+<p>下拉選單</p><form action = "https://24h.pchome.com.tw/store/" method = "get">
 <select name ="category">
 <option value = "DYAJGQ" selected>iPadPro11吋全系列</option>
 <option value = "DYAJGR">11吋128GWiFi</option>
@@ -17,7 +17,7 @@
 </form>
 
 
-關鍵字搜尋<form action = "https://ecshweb.pchome.com.tw/search/v3.3/" method = "get">
+<p>關鍵字搜尋</p><form action = "https://ecshweb.pchome.com.tw/search/v3.3/" method = "get">
 <input type = "text" name = "q">
 
 <input type ="submit" value = "OK">
@@ -30,3 +30,4 @@
 <p>時間<input type="time"name="time"></p1>
 <input type ="submit" value = "送出">
 <input type ="reset" value = "重置">
+
